INCLUDE_DIRECTORIES (
	../msvc
	../freetype235/include
	../freetype235/include/freetype2
	.
	fofi
	goo
	splash
	poppler
	glib
)

ADD_DEFINITIONS (-D_CRT_SECURE_NO_WARNINGS)

SET (POPPLER_HEADERS
goo/gmem.h
goo/FixedPoint.h
goo/GooTimer.h
goo/gstrtod.h
goo/PNGWriter.h
goo/gtypes.h
goo/GooHash.h
goo/GooList.h
goo/GooMutex.h
goo/GooString.h
goo/GooVector.h
goo/gfile.h
splash/SplashFTFontFile.h
splash/Splash.h
splash/SplashPattern.h
splash/SplashPath.h
splash/SplashT1Font.h
splash/SplashFontFileID.h
splash/SplashXPath.h
splash/SplashFontEngine.h
splash/SplashState.h
splash/SplashT1FontEngine.h
splash/SplashFontFile.h
splash/SplashTypes.h
splash/SplashErrorCodes.h
splash/SplashBitmap.h
splash/SplashFTFontEngine.h
splash/SplashScreen.h
splash/SplashGlyphBitmap.h
splash/SplashFTFont.h
splash/SplashClip.h
splash/SplashT1FontFile.h
splash/SplashFont.h
splash/SplashXPathScanner.h
splash/SplashMath.h
fofi/FoFiTrueType.h
fofi/FoFiType1.h
fofi/FoFiEncodings.h
fofi/FoFiType1C.h
fofi/FoFiBase.h
poppler/ErrorCodes.h
poppler/Parser.h
poppler/CharTypes.h
poppler/SplashOutputDev.h
poppler/BuiltinFont.h
poppler/UnicodeMap.h
poppler/CharCodeToUnicode.h
poppler/PageTransition.h
poppler/Error.h
poppler/UnicodeCompTables.h
poppler/Movie.h
poppler/OptionalContent.h
poppler/Function.h
poppler/Form.h
poppler/ProfileData.h
poppler/PreScanOutputDev.h
poppler/Dict.h
poppler/UnicodeTypeTable.h
poppler/PageLabelInfo.h
poppler/XRef.h
poppler/CompactFontTables.h
poppler/JBIG2Stream.h
poppler/FontEncodingTables.h
poppler/NameToCharCode.h
poppler/GfxState.h
poppler/OutputDev.h
poppler/JArithmeticDecoder.h
poppler/UnicodeMapTables.h
poppler/Stream.h
poppler/Catalog.h
poppler/FontInfo.h
poppler/DateInfo.h
poppler/Array.h
poppler/Object.h
poppler/PDFDocEncoding.h
poppler/Lexer.h
poppler/TextOutputDev.h
poppler/PDFDoc.h
poppler/Outline.h
poppler/PSTokenizer.h
poppler/Sound.h
poppler/GfxFont.h
poppler/NameToUnicodeTable.h
poppler/Link.h
poppler/GfxState_helpers.h
poppler/Stream-CCITT.h
poppler/FileSpec.h
poppler/PopplerCache.h
poppler/Decrypt.h
poppler/UnicodeCClassTables.h
poppler/JPXStream.h
poppler/PSOutputDev.h
poppler/Gfx.h
poppler/XpdfPluginAPI.h
poppler/poppler-config.h
poppler/GlobalParams.h
poppler/Page.h
poppler/CMap.h
poppler/BuiltinFontTables.h
poppler/UTF8.h
poppler/UnicodeDecompTables.h
poppler/Annot.h
poppler/SecurityHandler.h
glib/poppler-annot.h
glib/poppler-form-field.h
glib/poppler-layer.h
glib/poppler-private.h
glib/poppler-action.h
glib/poppler-enums.h
glib/poppler-attachment.h
glib/poppler-page.h
glib/poppler-features.h
glib/poppler-date.h
glib/poppler-document.h
glib/poppler.h
)

SET (POPPLER_SOURCES 
goo/gstrtod.cc
goo/gfile.cc
goo/GooList.cc
goo/PNGWriter.cc
goo/gmempp.cc
goo/gmem.cc
goo/GooString.cc
goo/GooTimer.cc
goo/GooHash.cc
goo/FixedPoint.cc
splash/SplashFTFontFile.cc
splash/SplashT1FontEngine.cc
splash/SplashFTFontEngine.cc
splash/SplashFontEngine.cc
splash/SplashState.cc
splash/Splash.cc
splash/SplashFontFileID.cc
splash/SplashScreen.cc
splash/SplashBitmap.cc
splash/SplashClip.cc
splash/SplashT1FontFile.cc
splash/SplashFontFile.cc
splash/SplashT1Font.cc
splash/SplashXPath.cc
splash/SplashPath.cc
splash/SplashFont.cc
splash/SplashFTFont.cc
splash/SplashXPathScanner.cc
splash/SplashPattern.cc
fofi/FoFiTrueType.cc
fofi/FoFiType1C.cc
fofi/FoFiType1.cc
fofi/FoFiEncodings.cc
fofi/FoFiBase.cc
poppler/FontInfo.cc
poppler/PageLabelInfo.cc
poppler/Array.cc
poppler/Form.cc
poppler/SplashOutputDev.cc
poppler/Catalog.cc
poppler/Gfx.cc
poppler/DateInfo.cc
poppler/GlobalParams.cc
poppler/GfxState.cc
poppler/Outline.cc
poppler/PSOutputDev.cc
poppler/ProfileData.cc
poppler/FontEncodingTables.cc
poppler/OutputDev.cc
poppler/JBIG2Stream.cc
poppler/XpdfPluginAPI.cc
poppler/Dict.cc
poppler/Object.cc
poppler/PDFDocEncoding.cc
poppler/UnicodeTypeTable.cc
poppler/PageTransition.cc
poppler/XRef.cc
poppler/JArithmeticDecoder.cc
poppler/Lexer.cc
poppler/Annot.cc
poppler/Function.cc
poppler/BuiltinFont.cc
poppler/PSTokenizer.cc
poppler/Page.cc
poppler/Parser.cc
poppler/BuiltinFontTables.cc
poppler/Link.cc
poppler/PopplerCache.cc
poppler/GfxFont.cc
poppler/Sound.cc
poppler/FileSpec.cc
poppler/JPXStream.cc
poppler/Stream.cc
poppler/UnicodeMap.cc
poppler/Error.cc
poppler/PreScanOutputDev.cc
poppler/GlobalParamsWin.cc
poppler/CMap.cc
poppler/Decrypt.cc
poppler/OptionalContent.cc
poppler/TextOutputDev.cc
poppler/CharCodeToUnicode.cc
poppler/SecurityHandler.cc
poppler/NameToCharCode.cc
poppler/PDFDoc.cc
poppler/Movie.cc
glib/poppler-enums.c
glib/poppler-page.cc
glib/poppler-document.cc
glib/poppler-annot.cc
glib/poppler-action.cc
glib/test-poppler-glib.cc
glib/poppler-layer.cc
glib/poppler.cc
glib/poppler-date.cc
glib/poppler-attachment.cc
glib/poppler-form-field.cc
)

ADD_LIBRARY (poppler ${POPPLER_HEADERS} ${POPPLER_SOURCES})
